--- a/source/examples/FIR_design.tex
+++ b/source/examples/FIR_design.tex
@@ -259,11 +259,11 @@ can now catch multiple figures/code chunk.
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f4f326bac88>
+<matplotlib.figure.Figure at 0x7f71d4452898>
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f4f326bac88>
+<matplotlib.figure.Figure at 0x7f71d4452898>
 \end{Verbatim}
 
 
@@ -271,6 +271,11 @@ can now catch multiple figures/code chunk.
 \PY{n}{impz}\PY{p}{(}\PY{n}{a}\PY{p}{)}
 \end{Verbatim}
 \includegraphics[width= \linewidth]{figures/FIR_design_figure2_1.pdf}
+
+
+\begin{Verbatim}[commandchars=\\\{\},frame=single,fontsize=\small, xleftmargin=0.5em]
+\PY{n}{show}\PY{p}{(}\PY{p}{)}
+\end{Verbatim}
 
 \subsection{Highpass FIR Filter}\label{highpass-fir-filter}
 
