--- a/source/examples/FIR_design_pygments.tex
+++ b/source/examples/FIR_design_pygments.tex
@@ -127,11 +127,11 @@ figures/code chunk.
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f18c60a0a20>
+<matplotlib.figure.Figure at 0x7f00047f6630>
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f18c60a0a20>
+<matplotlib.figure.Figure at 0x7f00047f6630>
 \end{Verbatim}
 
 
@@ -139,6 +139,11 @@ figures/code chunk.
 \PY{n}{impz}\PY{p}{(}\PY{n}{a}\PY{p}{)}
 \end{Verbatim}
 \includegraphics[width= \linewidth]{figures/FIR_design_pygments_figure2_1.pdf}
+
+
+\begin{Verbatim}[commandchars=\\\{\},frame=single,fontsize=\small, xleftmargin=0.5em]
+\PY{n}{show}\PY{p}{(}\PY{p}{)}
+\end{Verbatim}
 
 
 \subsection{Highpass FIR Filter}
