--- a/source/examples/FIR_design_verb.tex
+++ b/source/examples/FIR_design_verb.tex
@@ -122,16 +122,20 @@ show()
 figure(2)
 \end{verbatim}
 \begin{verbatim}
-<matplotlib.figure.Figure at 0x7fb05cd7f6a0>
+<matplotlib.figure.Figure at 0x7faae907c668>
 \end{verbatim}
 \begin{verbatim}
-<matplotlib.figure.Figure at 0x7fb05cd7f6a0>
+<matplotlib.figure.Figure at 0x7faae907c668>
 \end{verbatim}
 
 \begin{verbatim}
 impz(a)
 \end{verbatim}
 \includegraphics[width= \linewidth]{figures/FIR_design_verb_figure2_1.pdf}
+
+\begin{verbatim}
+show()
+\end{verbatim}
 
 
 \subsection{Highpass FIR Filter}
