--- a/source/examples/FIR_design_minted.tex
+++ b/source/examples/FIR_design_minted.tex
@@ -123,16 +123,20 @@ show()
 figure(2)
 \end{minted}
 \begin{minted}[fontsize=\small, xleftmargin=0.5em, mathescape, frame = leftline]{text}
-<matplotlib.figure.Figure at 0x7f5c95829a58>
+<matplotlib.figure.Figure at 0x7f204b58c5f8>
 \end{minted}
 \begin{minted}[fontsize=\small, xleftmargin=0.5em, mathescape, frame = leftline]{text}
-<matplotlib.figure.Figure at 0x7f5c95829a58>
+<matplotlib.figure.Figure at 0x7f204b58c5f8>
 \end{minted}
 
 \begin{minted}[mathescape, fontsize=\small, xleftmargin=0.5em]{python}
 impz(a)
 \end{minted}
 \includegraphics[width= \linewidth]{figures/FIR_design_minted_figure2_1.pdf}
+
+\begin{minted}[mathescape, fontsize=\small, xleftmargin=0.5em]{python}
+show()
+\end{minted}
 
 
 \subsection{Highpass FIR Filter}
