Add figure and update editor section

--- a/source/examples/FIR_design_pygments.tex
+++ b/source/examples/FIR_design_pygments.tex
@@ -127,11 +127,11 @@ figures/code chunk.
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f00047f6630>
+<matplotlib.figure.Figure at 0x7fa0705188d0>
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f00047f6630>
+<matplotlib.figure.Figure at 0x7fa0705188d0>
 \end{Verbatim}
 
 
