--- a/source/examples/FIR_design.tex
+++ b/source/examples/FIR_design.tex
@@ -259,11 +259,11 @@ can now catch multiple figures/code chunk.
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f71d4452898>
+<matplotlib.figure.Figure at 0x7f951139f710>
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f71d4452898>
+<matplotlib.figure.Figure at 0x7f951139f710>
 \end{Verbatim}
 
 
