--- a/source/examples/FIR_design_cells.tex
+++ b/source/examples/FIR_design_cells.tex
@@ -259,11 +259,11 @@ can now catch multiple figures/code chunk.
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f1bfcb35ac8>
+<matplotlib.figure.Figure at 0x7fdd68f73ba8>
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7f1bfcb35ac8>
+<matplotlib.figure.Figure at 0x7fdd68f73ba8>
 \end{Verbatim}
 
 
