--- a/source/examples/FIR_design_minted.tex
+++ b/source/examples/FIR_design_minted.tex
@@ -123,10 +123,10 @@ show()
 figure(2)
 \end{minted}
 \begin{minted}[fontsize=\small, xleftmargin=0.5em, mathescape, frame = leftline]{text}
-<matplotlib.figure.Figure at 0x7f204b58c5f8>
+<matplotlib.figure.Figure at 0x7f8dc08ad668>
 \end{minted}
 \begin{minted}[fontsize=\small, xleftmargin=0.5em, mathescape, frame = leftline]{text}
-<matplotlib.figure.Figure at 0x7f204b58c5f8>
+<matplotlib.figure.Figure at 0x7f8dc08ad668>
 \end{minted}
 
 \begin{minted}[mathescape, fontsize=\small, xleftmargin=0.5em]{python}
