--- a/source/examples/FIR_design_verb.tex
+++ b/source/examples/FIR_design_verb.tex
@@ -122,10 +122,10 @@ show()
 figure(2)
 \end{verbatim}
 \begin{verbatim}
-<matplotlib.figure.Figure at 0x7faae907c668>
+<matplotlib.figure.Figure at 0x7f535f29e908>
 \end{verbatim}
 \begin{verbatim}
-<matplotlib.figure.Figure at 0x7faae907c668>
+<matplotlib.figure.Figure at 0x7f535f29e908>
 \end{verbatim}
 
 \begin{verbatim}
