--- a/source/examples/FIR_design_cells.tex
+++ b/source/examples/FIR_design_cells.tex
@@ -259,11 +259,11 @@ can now catch multiple figures/code chunk.
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7efdb394b860>
+<matplotlib.figure.Figure at 0x7fc9d17be748>
 \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=leftline,fontsize=\small, xleftmargin=0.5em]
-<matplotlib.figure.Figure at 0x7efdb394b860>
+<matplotlib.figure.Figure at 0x7fc9d17be748>
 \end{Verbatim}
 
 
