--- a/source/examples/FIR_design_verb.tex
+++ b/source/examples/FIR_design_verb.tex
@@ -122,10 +122,10 @@ show()
 figure(2)
 \end{verbatim}
 \begin{verbatim}
-<matplotlib.figure.Figure at 0x7f9b376ced68>
+<matplotlib.figure.Figure at 0x7f7a9b6a4ac8>
 \end{verbatim}
 \begin{verbatim}
-<matplotlib.figure.Figure at 0x7f9b376ced68>
+<matplotlib.figure.Figure at 0x7f7a9b6a4ac8>
 \end{verbatim}
 
 \begin{verbatim}
